fix space in the bottom of the image using vertical-align. add error message in password input

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ p {
 
 body {
   background-color: #f8f8f8;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -38,6 +39,7 @@ body {
 .header-wrapper > img {
   width: 100%;
   height: 100%;
+  vertical-align: bottom;
 }
 
 .header-title {
@@ -86,7 +88,7 @@ body {
 
 .main-upper {
   padding: 100px 8% 48px 8%;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 1.2rem;
 }
 
@@ -104,13 +106,13 @@ body {
 
 .main-center > p {
   width: 100%;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 1.2rem;
   margin-bottom: 10px;
 }
 
 .form-item {
-  width: 270px;
+  width: 260px;
   margin: 10px 0;
 }
 
@@ -120,6 +122,7 @@ label {
   text-transform: uppercase;
   color: #4b4b4b;
   margin-bottom: 5px;
+  font-weight: 400;
 }
 
 input {
@@ -130,6 +133,17 @@ input {
 input:focus {
   border: 1px solid blue;
   box-shadow: 3px 3px 3px var(--shadow-color);
+}
+
+.error:invalid {
+  border: 1px solid red;
+  box-shadow: 3px 3px 3px var(--shadow-color);
+}
+
+.error:invalid + p::after {
+  content: "*Password do not match";
+  color: red;
+  font-size: 0.8rem;
 }
 
 form > button {
